--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<a href=https://github.com/Qian-Yicheng/hello-world>Hello-World porject</a>
+ <title>QianYicheng's Main Page<title/>
+<a href="https://github.com/Qian-Yicheng/hello-world" target="_blank">Hello-World porject</a>
 </body>
 </html>
